<resources>
    <string name="app_name" translatable="false">VIPWorker</string>
    <string name="firebase_short_link" translatable="false">https://vwoker.page.link</string>
    <string name="ADMOB_APPID" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="APPLOVIN_SDK_KEY" translatable="false">JZvhNAVFT7F6PNZgONqTvMH6LWetaUNRJgZBBKAO5EPrMdmmebzSdSqMusptI8sTWdeugqWzHmU_uPMBXSBJCA</string>
    <string name="ONE_SIGNAL_APPID" translatable="false">d38e5167-a05b-4924-a14d-8d32610f6b8e</string>
    <string name="lucky_spin">Lucky Spin</string>
    <string name="scratch_win">Scratch Card></string>
    <string name="playzone">Play Zone</string>
    <string name="videozone">Video Zone</string>
    <string name="read_artical">Read Article</string>
    <string name="my_promotion">My Promotion</string>
    <string name="play_for_reward">Play For Reward</string>
    <string name="read_artical_offer_get_reward">Read Article &amp; Complete Offer get Reward></string>
    <string name="daily_bonus">Daily Bonus</string>
    <string name="Activity_ABOUTUS">About Us</string>
    <string name="Activity_Collect_REDEEM">Collect Redeem</string>
    <string name="Activity_Complete_OFFER">Complete Offer</string>
    <string name="Activity_FAQ">Faq</string>
    <string name="Activity_Instruction">Instruction</string>
    <string name="Activity_GAMES">Games</string>
    <string name="Activity_QUIZ">Math Quiz</string>
    <string name="Activity_REWARD">Rewards</string>
    <string name="Activity_SETTING">Setting</string>
    <string name="Activity_STORE">Store</string>
    <string name="Activity_PAY">Pay</string>
    <string name="try_again_later">Try Again Later</string>
    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="getting_started">Get \n Started</string>
    <string name="user_name">User Name</string>
    <string name="otp_has_been_sent_to_your_email">Otp has been sent to your Email</string>
    <string name="login_google">Login with Google</string>
    <string name="login_with_email">Login with Email</string>
    <string name="signup_with_email">Signup with Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="signup">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="phone_no">Phone No.</string>
    <string name="email">Email</string>
    <string name="demo_email">john@gmail.com</string>
    <string name="existing_user">Existing User?</string>
    <string name="signup_with">Or Sign Up With</string>
    <string name="welcome_back">Welcome back ✨</string>
    <string name="log_in">Log In</string>
    <string name="procced">PROCEED</string>
    <string name="new_user_cr">Don\'t Have Account? </string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="forgot_password_desc">Don’t worry we are here to help you</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="already_have_an_account_signin_here">Already have an account?</string>
    <string name="enter_valid_detail">Please Fill All Details !!</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="update_password">Update Password</string>
    <string name="password_reset">Password Reset </string>
    <string name="no_data_found">No Data Found</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="send_otp_again">Send OTP Again?</string>
    <string name="please_select_profile_image">Please Select Profile Image</string>
    <string name="term_privacy">By Logging / SigningUp in, you agree to our \n Terms of Service and Privacy Policy</string>
    <string name="game">Games</string>
    <string name="play_game">Play Games</string>
    <string name="txt_loading">Loading..</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_confirm_exit">Do you want to Exit?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_this_function_is_not_support_here">This function is not support here.</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="contact_us">Contact us</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>
    <string name="youtube">Youtube</string>
    <string name="facebook">Facebook</string>
    <string name="telegram">Telegram</string>
    <string name="setting">Setting</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="rateapp">Rate App</string>
    <string name="more_app">More App</string>
    <string name="social_link">Social Link</string>
    <string name="setting_subtitle">Account setting &amp; Support &amp; about</string>
    <string name="read_privacypolicy">Click to Read Privacy Policy</string>
    <string name="feedback_subtitle">Submit Feedback to improve our service</string>
    <string name="logout_subtitle">Log out this account</string>
    <string name="support_subtitle">Create a ticket for your query our team will be respond via mail and solve click to read tc.</string>
    <string name="instructions">Instructions</string>
    <string name="history">History</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About us</string>
    <string name="rate_us">Rate Us</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="website">Website</string>
    <string name="enter_appurl">https://play.google.com/store/apps/details?id=package name</string>
    <string name="Playstore_url">App PLay store url</string>
    <string name="search">Search</string>
    <string name="youtube_videourl">Youtube Video url</string>
    <string name="example_ytlink">https://www.youtube.com/watch?v=stD6WUrsew</string>
    <string name="website_title">Website/Blog/Post Title</string>
    <string name="website_link">Enter website Link</string>
    <string name="google_com">https://www.google.com/</string>
    <string name="add">add</string>
    <string name="promote">Promote</string>
    <string name="promote_type">Promote Blog, Videos</string>
    <string name="video_promotion">Video Promotion</string>
    <string name="website_promotion">Website Promotion</string>
    <string name="create_promotion">Create Promotion</string>
    <string name="per_install_coin">Per View Coin</string>
    <string name="max_install_limit">Max Views Limit</string>
    <string name="create">Create</string>
    <string name="enter_no_of_view">Enter no. of view</string>
    <string name="please_fill_details">Please Fill Details</string>
    <string name="not_enough_coin">Not Enough Coin</string>
    <string name="max_promomtion_limit">Prmotion Max Limit is</string>
    <string name="invalid_url">Invalid Url</string>
    <string name="status">Status</string>
    <string name="view_report">View Report</string>
    <string name="active_promotion">Active Promotion</string>
    <string name="active">Active</string>
    <string name="completed">Completed!</string>
    <string name="promote_videos">Promote Videos</string>
    <string name="boost_your_video_watch_time_and_traffic">Boost your video watch time and traffic</string>
    <string name="apps">Apps</string>
    <string name="videos">Videos</string>
    <string name="boost_your_website_traffic">Boost your website get traffic</string>
    <string name="promote_your_app_and_increase_download">Promote your app and Increase Download</string>
    <string name="app_install_get">User Downloaded App</string>
    <string name="promotion_report">Promotion Report</string>
    <string name="website_visited">User Website Visited</string>
    <string name="video_watched">User Video Watched</string>
    <string name="promote_apps_video_web">Promote your Content</string>
    <string name="all_promotion">All Promotion</string>
    <string name="razorpay">RazorPay</string>
    <string name="paypal">Paypal</string>
    <string name="upi">Upi</string>
    <string name="no_upi_app_found">No Upi App Found.</string>
    <string name="payment_cancelled">Payment Cancelled</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="payment_successfull">Payment Successfull</string>
    <string name="razorpayAPIKey" />
    <string name="purchase_coin_msg">Purchase coin</string>
    <string name="coin_store">Coin Store</string>
    <string name="select_payment_option_to_continue">Select Payment Option to Continue</string>
    <string name="tap_to_continue">Click to Pay</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="_0">0</string>
    <string name="_00000">00000</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="invite">Invite</string>
    <string name="support">Support</string>
    <string name="close">Close</string>
    <string name="_150">+150</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s Lorem Ipsum is simply dummy text  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="yes">Yes</string>
    <string name="date">2022-09-20</string>
    <string name="support_subject">Subject</string>
    <string name="your_message">Your Message</string>
    <string name="home">Home</string>
    <string name="missions">Mission</string>
    <string name="after_payment">After Payment</string>
    <string name="input_transaction_id">Input Transaction ID</string>
    <string name="attact">Attach</string>
    <string name="upload_screenshot">Upload Screenshot</string>
    <string name="reward">Rewards</string>
</resources>