<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/uploadLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:ignore="MissingConstraints"
    android:background="@drawable/bottomsheet_bg"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_payment_bill"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/after_payment"
        android:textColor="@color/blue"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />

    <RelativeLayout
        android:id="@+id/uploadImage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@drawable/border"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/upload_screenshot"
            android:textColor="@color/blue"
            android:textSize="15sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uploadImage1"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn_square"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/attact"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@drawable/border"
        >

        <EditText
            android:id="@+id/transactionID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:background="@null"
            android:hint="@string/input_transaction_id"
            android:textColorHint="@color/blue"
            android:padding="10dp"
            android:textColor="@color/blue"
            android:textSize="15sp" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_btn_square"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto_regular"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/submit"
        android:textColor="@color/white" />
</LinearLayout>