<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_10dp">

        <TextView
            android:id="@+id/remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_toStartOf="@+id/amount"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="1"
            android:text="@string/website"
            android:textSize="15sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/remark"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_toStartOf="@+id/amount"
            android:alpha="0.6"
            android:fontFamily="@font/roboto_regular"
            android:maxLines="1"
            android:text="@string/boost_your_website_traffic"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/roboto_regular"
            android:padding="5dp"
            android:text="@string/_150"
            android:textColor="@color/black" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>