<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    android:layout_height="wrap_content">

    <RelativeLayout android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="5dp"
        >

        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/rank"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_user"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_image"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="1"
            android:text="@string/name"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:ignore="RelativeOverlap" />


        <RelativeLayout
            android:id="@+id/layout_coin"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_height="25sp"
            android:layout_marginEnd="@dimen/margin_10dp">

            <ImageView
                android:id="@+id/icons"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_coin"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/coins"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/icons"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/_00000"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </RelativeLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>
