<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_white"
        android:gravity="center"
        android:minWidth="@dimen/_150sdp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_10dp"
            android:padding="10dp"
            android:src="@drawable/ic_aboutus" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="5dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:singleLine="true"
                android:background="@drawable/bg_edittext"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/support_subject"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/support_subject"
                android:inputType="text"
                android:background="@drawable/bg_edittext"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/your_message"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/your_message"
                android:inputType="textMultiLine"
                android:background="@drawable/bg_edittext"
                android:padding="12dp"
                android:singleLine="true"
                android:lines="4"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/positive"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_square"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/submit"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/negative"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_info"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/close"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
